<resources>
    <string name="app_name">EasyList</string>
    <string name="by">by MegaDev</string>
    <string name="megadev">MegaDev</string>

    <string name="txtSalvar">Salvar</string>
    <string name="txtListas">Lista de Compras</string>
    <string name="labelNome">Nome da Lista</string>
    <string name="labelQuantidade">Quantidade</string>


    <string name="hintQuantidade">Quantidade</string>
    <string name="hintProduto">Produto</string>
    <string name="hintLista">Nome da lista</string>


    <string name="txtAlerta">Atenção!</string>
    <string name="txtAlertaProduto">Você deve informar os dados solicitados.</string>
    <string name="txtAlertaListas">Você deve informar os dados solicitados.</string>

    <string name="txtExcluir">Excluir</string>
    <string name="txtConfirmaExclusao">Confirma a exclusão?</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnConfirmar">Sim</string>

    <string name="txtListaVazia">Lista Vazia!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bem-vindo!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_com_google">Login com Google</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="logout">Sair</string>
    <string name="listName">Churrasco</string>
    <string name="go_to_list">go to list</string>
    <string name="product_name">Carne</string>
    <string name="medida">2Kg</string>
    <string name="lista">Lista</string>
    <string name="unidade_de_medida">Unidade de medida:</string>
    <string name="hintDescricao">Descrição</string>
    <string name="_30_30">30/30</string>
    <string name="_0_30">0/30</string>
    <string name="e_mail">E-mail</string>
    <string name="compartilhar_para">Compartilhar para:</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="adicionar_lista">Adicionar lista</string>
    <string name="compartilhar_lista">Compartilhar lista</string>
    <string name="compartilhar_com">Compartilhar com:</string>
    <string name="adicionar_item">Adicionar item</string>
    <string name="back">back</string>
    <string name="ahare">ahare</string>
    <string name="sharing">sharing</string>
    <string name="share" />

    <string-array name="units_arrays">
        <item>un</item>
        <item>mL</item>
        <item>L</item>
        <item>kg</item>
        <item>g</item>
        <item>mg</item>
        <item>cm</item>
        <item>m</item>
        <item>m²</item>
        <item>m³</item>
    </string-array>


</resources>
