<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.main.NewListActivity"
    android:background="@drawable/popupwindow">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:text="@string/adicionar_lista"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="#2E8DCA"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etNomeLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hintLista"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvCountNameList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNomeLista"
        android:layout_alignEnd="@id/etNomeLista"
        android:text="@string/_0_30" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/txtSalvar" />
    
</RelativeLayout>