<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="#FFFFFF"
    tools:context=".activity.main.MainListActivity">

    <RelativeLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/appbar">

        <ImageView
            android:id="@+id/backList"
            android:layout_width="25dp"
            android:layout_height="23dp"
            android:layout_alignStart="@id/toolbar_list_title"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/toolbar_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/lista"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#2E8DCA"
            android:textAlignment="center"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/shareList"
            android:layout_width="28dp"
            android:layout_height="26dp"
            android:layout_alignEnd="@id/toolbar_list_title"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/share"
            android:contentDescription="@string/share" />

        <ImageView
            android:id="@+id/sharing"
            android:layout_width="28dp"
            android:layout_height="26dp"
            android:layout_alignEnd="@id/toolbar_list_title"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/sharing"
            android:visibility="invisible"
            app:srcCompat="@drawable/sharing" />

    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarLayout"
        android:background="#FFFFFF">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="#9BA6B7"
        android:tint="#fff"
        app:backgroundTint="#9BA6B7"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>